# Thirstys-Monolith

./: .cpanel.yml  .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.md  MANIFEST.in  Makefile  Monolith  PROJECT_STATUS.md  README.md  codex_deus_maximus  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.sh
.github/workflows/: constructor.yml  thirtys-monolith.yml
src/: __init__.py
src/app/agents/: codex_deus_maximus.py
src/monolith/: __init__.py  config.py  errors.py  health.py  ipc.py  logging.py  memory.py  metrics.py  models.py  scheduler.py  supervisor.py  worker.py
tests/: __init__.py  test_codex_deus_maximus.py  test_ipc.py  test_memory.py  test_scheduler.py  test_supervisor.py  test_worker.py
web/: index.html
